Debug rename endpoint
